app/css/main.less
// theming

@message-bg-incoming: #f0f0f0;
@read-indicator-avatar-size: 20px;
@video-call-accent: #1D9C0D;

// mixins

.material-transition(@kind, @duration: 480ms) {
  transition: @kind @duration;

  // this is like the material design "linear in, slow out"
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
}

.roboto() {
    font-family: 'Roboto', sans-serif;
}

.roboto-condensed() {
    font-family: 'Roboto Condensed', sans-serif;
}

.unselectable() {
    -webkit-user-select: none;
    user-select: none;
    cursor: default;
}

.avatar(@avatar-size) {
    .avatar {
        .unselectable();

        width: @avatar-size;
        height: @avatar-size;
        min-width: @avatar-size;
        float: left;
        vertical-align: middle;
        border-radius: @avatar-size / 2;
        margin-right: 8px;
    }

    div.avatar {
        background-color: #999;
        color: #fff;
        font-size: 10pt;
        line-height: @avatar-size;
        text-align: center;
        vertical-align: middle;
    }
}

// global config

body {
    margin: 0;
}

.material-icons {
    vertical-align: middle;
    max-width: 32px;
}

// singleton elements

@title-font-size: 12pt;
@title-height: 20px;
@title-padding-vert: 10px;
@title-background-color: #f0f0f0;
@title-background-disconnected: #e06060;
@title-border-bottom: 1px;
#title {
    .roboto-condensed();
    .unselectable();

    .unfocused & {
        color: #999;
    }

    .disconnected & {
        background: @title-background-disconnected;
    }
    .unfocused.disconnected & {
        background: lighten(@title-background-disconnected, 20%);
    }


    @bg: @title-background-color;

    font-size: @title-font-size;
    height: @title-height;
    text-align: right;
    background: @bg;
    border-bottom: @title-border-bottom solid darken(@bg, 10%);
    padding: @title-padding-vert 12px;
    margin: 0;

    position: fixed;
    left: 0;
    top: 0;
    right: 0;

    .material-icons.disconnected {
        margin-left: 8px;
    }

    .badge {
        cursor: pointer; // NOTE: doesn't work on OSX here...
        margin-left: 2px;
        margin-right: -4px;
        padding: 6px 4px;
        border-radius: 4px;

        &:hover {
            background-color: lighten(@title-background-color, 10%);
        }
    }
}

#app-container {
    .roboto();

    position: absolute;
    top: ((2 * @title-padding-vert) + @title-height + @title-border-bottom);
    left: 0;
    right: 0;
    bottom: 0;
    overflow-y: scroll;

    padding-top: 8px;
}

#loading {
    text-align: center;
}

//
// Friends list
//

ul#conversations {
    @avatar-size: 32px;

    margin: 0;
    padding: 0;

    .conversation {
        .unselectable();
        cursor: pointer;

        list-style: none;
        margin: 0;
        padding: 0.5em 8px;

        &.unread {
            font-weight: bold;

            .preview {
                color: #555;
            }
        }

        .avatar(@avatar-size);

        .avatars-2, .avatars-n {
            position: relative;
            width: @avatar-size;
            height: @avatar-size;
            float: left;
            margin-right: 8px;
        }

        .avatars-2 {
            .avatar {
                position: absolute;
                width: @avatar-size * 0.6;
                height: @avatar-size * 0.6;
                min-width: @avatar-size / 2;
                border-radius: @avatar-size * 0.3;
                margin-right: 0;
                line-height: @avatar-size * 0.6;
                font-size: 7pt;

                &:nth-child(1) {
                    top: 0;
                    left: 0;
                }

                &:nth-child(2) {
                    bottom: 0;
                    right: 0;
                }
            }
        }

        .avatars-n {
            .avatar {
                position: absolute;
                width: @avatar-size / 2;
                height: @avatar-size / 2;
                min-width: @avatar-size / 2;
                border-radius: @avatar-size / 4;
                margin-right: 0;
                line-height: @avatar-size / 2;
                font-size: 6pt;

                &:nth-child(1) {
                    top: 0;
                    left: 0;
                }

                &:nth-child(2) {
                    top: 0;
                    right: 0;
                }

                &:nth-child(3) {
                    bottom: 0;
                    left: 0;
                }

                &:nth-child(4) {
                    bottom: 0;
                    right: 0;
                }
            }
        }

        .name {
            .roboto-condensed();

            font-size: 12pt;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
        }

        div.preview {
            font-size: 10pt;
            color: #999;
            height: 1.2em;
            overflow: hidden;
        }

        img.preview {
            max-width: 100%;
            position: relative;
            top: -50%;
        }

        &:hover {
            background-color: #ddd;
        }
    }

}

//
// Conversation/chat list
//
#video-call {
    &.live {
        color: @video-call-accent;
    }
}
/* ... */

